# aruna-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.node  README.md  docker-compose.yml  test_tx.json  walkthrough.md
.agents/: AGENTS.md
.devcontainer/: devcontainer.json  features.json  postCreateCommand.sh
.github/workflows/: bench.yml  ci.yml  docker-node.yml  docker-ode.yml  docker-publish.yml  rust.yml
apps/dashboard/: index.html  script.js  style.css  wrangler.jsonc
apps/docs-site/: README.md  app.js  index.html  style.css
apps/explorer/: README.md  address.html  index.html  style.css
apps/explorer-ui/: README.md  address.html  app.js  block.html  index.html  network.html  nodes.html  nuxt.config.ts  package-lock.json  package.json  peers.html  style.css  supply.html  tailwind.config.js  tx.html  vite.config.ts  worker.ts  wrangler.jsonc  wrangler.toml
apps/explorer-ui/app/: error.vue
apps/explorer-ui/app/components/: AddressCard.vue  BlockCard.vue  Footer.vue  Header.vue  LatestBlocks.vue  LatestTransactions.vue  Navbar.vue  NetworkCard.vue  (+3 more)
apps/faucet/: README.md  app.js  index.html  style.css
apps/wallet-web/: README.md
config/: genesis.sumatera.toml
crates/ahash/: Cargo.toml
crates/ahash/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/explorer/: Cargo.toml
crates/explorer/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
crates/indexer/: Cargo.toml  README.md
crates/indexer/migrations/: 0001_create_blocks.sql  0002_create_transactions.sql  0003_create_accounts.sql  0004_create_chain_stats.sql
crates/indexer/src/: config.rs  db.rs  main.rs  poller.rs  rpc_client.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: bootstrap.rs  cli.rs  lib.rs  main.rs  rpc.rs  runtime.rs
crates/node/src/runtime/: block_loop.rs  mod.rs  network_loop.rs  node_runtime.rs  rpc_loop.rs  shutdown.rs
crates/node/tests/: byzantine_tests.rs  consensus_correctness.rs  fork_simulation.rs  multi_node_consensus.rs  network_conformance.rs  network_features.rs  node_recovery.rs  persistent_peers.rs  production_node_features.rs  protocol_conformance.rs  rpc_endpoints.rs  state_commitment_conformance.rs  wallet_e2e.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: address.rs  bech32m.rs  block.rs  chain.rs  difficulty.rs  errors.rs  hash.rs  lib.rs  nonce.rs  serialization.rs  transaction.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/wallet-cli/: Cargo.toml
crates/wallet-cli/src/: main.rs
deployment/: README.md  config.example.yml
deployment/cloudflare/: README.md  wrangler-deploy.sh
deployment/compose/: docker-compose.production.yml
deployment/kubernetes/: README.md  aruna-node-statefulset.yaml
deployment/monitoring/: README.md  docker-compose.monitoring.yml  prometheus.yml
deployment/scripts/: healthcheck.sh  install-node.sh  update-node.sh
deployment/systemd/: cloudflared.service  docker-compose-aruna.service
docker/node/: Dockerfile
docker/ode/: Dockerfile
docs/: ode.md
docs/adr/: adr-0001-project-principles.md  adr-0002-monorepo-strategy.md  adr-0003-rust-as-primary-language.md  adr-0004-account-based-model.md  adr-0005-hybrid-consensus.md  adr-0006-block-time.md  adr-0007-maximum-supply.md  adr-0008-bitcoin-style-halving.md  adr-0009-ahash-mining-algorithm.md  adr-0010-arm-first-mining-strategy.md  adr-0011-libp2p-networking.md  adr-0011-p2p-networking-strategy.md  adr-0012-node-types.md  adr-0013-address-format.md  adr-0014-bip39-hd-wallet-standard.md  adr-0015-full-evm-compatibility.md  adr-0016-state-commitment-strategy.md  adr-0016-state-root-strategy.md  adr-0017-explorer-architecture.md  adr-0018-platform-architecture.md
docs/ai/: adr-enforcement.md  context-index.md
docs/ai/skills/: adr-reviewer.md
docs/development/: official-development-environment.md
docs/economics/: dex-economics.md  domain-economics.md  emission-model.md  miner-economics.md  survivability-analysis.md  treasury-model.md  validator-economics-stress-test.md  validator-economics.md
docs/prd/: prd-v1.0-vol1-foundation.md  prd-v1.0-vol10-governance-treasury.md  prd-v1.0-vol11-product-suite.md  prd-v1.0-vol12-roadmap-execution-plan.md  prd-v1.0-vol2-tokenomics.md  prd-v1.0-vol3-architecture.md  prd-v1.0-vol4-tech-architecture.md  prd-v1.0-vol5-p2p-specification.md  prd-v1.0-vol6-wallet-cryptography.md  prd-v1.0-vol7-evm-execution.md  prd-v1.0-vol8-security-threat-model.md  prd-v1.0-vol9-infra-operations.md
docs/protocol/: address.md  block-rewards.md  block.md  consensus.md  fork-choice.md  genesis-allocation.md  genesis.md  mempool.md  network-messages.md  serialization.md  staking.md  state.md  transaction.md
docs/rfc/: RFC-0001-ahash-parameters.md  RFC-0002-ahash-difficulty-model.md  RFC-0003-block-reward-schedule.md  RFC-0004-address-format.md  RFC-0005-consensus-finality.md  RFC-0006-validator-weight-model.md  RFC-0007-transaction-serialization.md  RFC-0008-mempool-policy.md  RFC-0009-evm-compatibility-scope.md  RFC-0010-staking-parameters.md  RFC-0012-address-encoding-freeze.md
docs/rfc/archive/: .gitkeep
infrastructure/systemd/: aruna-node.service
scripts/: backup.sh  bootstrap.sh  install.sh  restore.sh  update-node.sh
sdk/flutter/: README.md
sdk/javascript/: README.md
sdk/rust/: README.md
tests/: multi_node_integration.sh  rpc_test.sh
workers/dashboard-api/: README.md  wrangler.toml
workers/dashboard-api/src/: index.js
workers/explorer-api/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/explorer-api/src/: index.ts
workers/faucet-api/: README.md  wrangler.toml
workers/faucet-api/src/: index.js
workers/rpc-gateway/: README.md  wrangler.toml
workers/rpc-gateway/src/: index.js
(+60 files in other folders)
