[workspace]
resolver = "2"
members = [
    "crates/primitives",
    "crates/crypto",
    "crates/ahash",
    "crates/storage",
    "crates/state",
    "crates/consensus",
    "crates/node",
    "crates/testing"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ARUNA-Network/aruna-core"

[workspace.dependencies]
bincode = "1.3.3"
blake3 = "1"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
hex = "0.4.3"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
thiserror = "2"
toml = "0.8.8"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7.4", features = ["json"] }
