[package]
name = "aruna-ahash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
blake3 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
aes = "0.8.3"
argon2 = "0.5.3"
