[package]
name = "aruna-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-state = { path = "../state" }
aruna-storage = { path = "../storage" }
serde = { workspace = true }
thiserror = { workspace = true }
