[package]
name = "aruna-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
aes = "0.8.3"
argon2 = "0.5.3"
k256 = { version = "0.13.3", features = ["ecdsa"] }
