[package]
name = "aruna-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
