[package]
name = "aruna-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ARUNA Network block indexer — polls Node RPC and writes to PostgreSQL for Explorer consumption."

[[bin]]
name = "aruna-indexer"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
