[package]
name = "aruna-mempool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-storage = { path = "../storage" }
aruna-state = { path = "../state" }
serde = { workspace = true }
thiserror = { workspace = true }
