[package]
name = "aruna-networking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-storage = { path = "../storage" }
aruna-consensus = { path = "../consensus" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
