[package]
name = "aruna-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aruna-node"
path = "src/main.rs"

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-storage = { path = "../storage" }
aruna-state = { path = "../state" }
aruna-consensus = { path = "../consensus" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
