[package]
name = "aruna-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "aruna_node"
path = "src/lib.rs"

[[bin]]
name = "aruna-node"
path = "src/main.rs"

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-storage = { path = "../storage" }
aruna-state = { path = "../state" }
aruna-consensus = { path = "../consensus" }
aruna-mempool = { path = "../mempool" }
aruna-networking = { path = "../networking" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
