[package]
name = "aruna-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-ahash = { path = "../ahash" }
serde = { workspace = true }
thiserror = { workspace = true }
