[package]
name = "aruna-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aruna-primitives = { path = "../primitives" }
aruna-crypto = { path = "../crypto" }
aruna-ahash = { path = "../ahash" }
aruna-storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
